--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,8 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+.media-body {
+    color: white;
+    font-size: 25px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
